--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,11 @@
 # 工作流名称
-name: Build Custom GeoIP and IP-List Files from CSV
+name: Build Custom GeoIP and IP-List Files
 
 # 工作流触发条件
 on:
-  # 允许在 GitHub Actions 页面手动触发
   workflow_dispatch:
-  # 定时触发：每周四 UTC 时间 0 点 (北京时间上午8点) 运行
   schedule:
     - cron: "0 0 * * 4"
-  # 推送触发：当 master 分支有代码推送，且变动文件是本工作流文件时触发
   push:
     branches:
       - master
@@ -17,164 +14,173 @@ on:
 
 jobs:
   build:
-    # Job 的名称
-    name: Build Singapore GeoIP DAT and TXT Files
-    # Job 的运行环境，使用最新的 ubuntu 系统
+    name: Build Multi-Country GeoIP DAT and TXT Files
     runs-on: ubuntu-latest
     
+    # --- 核心改造 1: 定义国家列表 ---
+    # 在这里定义所有需要处理的国家/地区代码，用空格隔开。
+    # 未来想增加或删除国家，只需修改这一行！
+    env:
+      COUNTRIES: "SG HK JP"
+
     steps:
-      # 步骤1：检出 Loyalsoldier/geoip 的代码，用于后续的 .dat 文件生成
+      # 步骤1：检出 Loyalsoldier/geoip 的代码 (无变化)
       - name: Checkout geoip tool codebase
         uses: actions/checkout@v4
         with:
           repository: Loyalsoldier/geoip
           path: ./geoip-tool
 
-      # 步骤2：设置 Go 语言环境，版本根据 geoip 工具的 go.mod 文件自动匹配
+      # 步骤2：设置 Go 环境 (无变化)
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version-file: ./geoip-tool/go.mod
 
-      # 步骤3：设置动态变量，用于生成带有时间戳的 Release 标签和名称
+      # 步骤3：设置动态变量 (无变化)
       - name: Set dynamic variables
         run: |
           echo "TAG_NAME=$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
           echo "RELEASE_NAME=$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
         shell: bash
 
-      # 步骤4：下载、校验并解压 IPinfo Lite CSV，这是最关键的数据获取步骤
+      # 步骤4：下载、校验并解压 IPinfo Lite CSV (无变化)
       - name: Download, Verify and Unzip IPinfo Lite CSV
         env:
           IPINFO_TOKEN: ${{ secrets.IPINFO_TOKEN }}
         run: |
-          # 创建数据目录
           mkdir -p ./data
-          
-          # 下载数据文件
           echo "Downloading ipinfo_lite.csv.gz..."
           curl -fL "https://ipinfo.io/data/ipinfo_lite.csv.gz?token=${IPINFO_TOKEN}" -o ./data/ipinfo_lite.csv.gz
-          
-          # 下载校验和文件
           echo "Downloading checksums..."
           curl -sfL "https://ipinfo.io/data/ipinfo_lite.csv.gz/checksums?token=${IPINFO_TOKEN}" -o ./data/checksums.json
-          
-          # 开始校验文件完整性
           echo "Verifying file integrity..."
-          # 从 json 文件中提取官方的 sha256 值
           official_sha256=$(jq -r '.checksums.sha256' ./data/checksums.json)
-          # 计算本地下载文件的 sha256 值
           local_sha256=$(sha256sum ./data/ipinfo_lite.csv.gz | awk '{print $1}')
-          
           echo "Official SHA256: ${official_sha256}"
           echo "Local SHA256:    ${local_sha256}"
-          
-          # 对比两个 sha256 值，如果不一致则报错并终止工作流
           if [ "${official_sha256}" != "${local_sha256}" ]; then
             echo "FATAL: Checksum mismatch! The downloaded file may be corrupted."
             exit 1
           fi
-          
-          # 校验成功后，解压文件
           echo "✅ Checksum match. Unzipping the file..."
           gunzip < ./data/ipinfo_lite.csv.gz > ./data/ipinfo_lite.csv
           
-      # 步骤5：从 CSV 文件提取并分流新加坡的 IP 地址段
-      - name: Extract and Split SG IP Ranges from CSV
+      # --- 核心改造 2: 循环提取 IP ---
+      # 步骤5：循环提取并分流所有指定国家的 IP 地址段
+      - name: Extract and Split IP Ranges for All Countries
         id: extract_ips
         run: |
-          # 使用 awk 从 CSV 文件中提取数据
-          # 1. 动态查找 "network" 和 "country_code" 列，避免因列顺序改变导致失败。
-          # 2. 使用 gsub() 函数去除字段中的双引号和回车符，保证数据干净。
-          # 3. 如果找不到关键列，会报错并停止，方便定位问题。
-          cat ./data/ipinfo_lite.csv | \
-          awk '
-          BEGIN { FS = "," }
-          NR == 1 {
-              for (i=1; i<=NF; i++) {
-                  header_field = $i
-                  gsub(/"|\r/, "", header_field)
-                  if (header_field == "country_code") { cc_idx = i }
-                  if (header_field == "network") { network_idx = i }
-              }
-              if (cc_idx == 0 || network_idx == 0) {
-                  print "FATAL: Could not find country_code or network columns in CSV header." > "/dev/stderr"
-                  exit 1
-              }
-              next
-          }
-          {
-              country_code = $(cc_idx)
-              gsub(/"|\r/, "", country_code)
-
-              if (country_code == "SG") {
-                  network = $(network_idx)
-                  gsub(/"|\r/, "", network)
-                  print network
-              }
-          }
-          ' > ./sg_cidrs_all.txt
-
-          # 检查是否成功提取到数据，如果文件为空则跳过后续步骤
-          if [ -s ./sg_cidrs_all.txt ]; then
-            # 分流 IPv4 和 IPv6
-            grep '\.' ./sg_cidrs_all.txt > ./sg_cidrs_ipv4.txt
-            grep ':' ./sg_cidrs_all.txt > ./sg_cidrs_ipv6.txt
+          HAS_ANY_FILES=false
+          # 遍历在 env 中定义的国家列表
+          for country_code in ${COUNTRIES}; do
+            echo "--- Processing for country: ${country_code} ---"
+            lc_country_code=$(echo "${country_code}" | tr '[:upper:]' '[:lower:]')
             
-            # 打印统计信息并设置输出变量
-            echo "✅ Successfully extracted $(wc -l < ./sg_cidrs_all.txt) total ranges."
-            echo "  - $(wc -l < ./sg_cidrs_ipv4.txt) IPv4 ranges."
-            echo "  - $(wc -l < ./sg_cidrs_ipv6.txt) IPv6 ranges."
+            # 使用 awk 提取当前循环国家的 IP
+            # 通过 -v 选项将 shell 变量 country_code 传递给 awk
+            cat ./data/ipinfo_lite.csv | \
+            awk -v cc_filter="${country_code}" '
+            BEGIN { FS = "," }
+            NR == 1 {
+                for (i=1; i<=NF; i++) {
+                    header_field = $i; gsub(/"|\r/, "", header_field)
+                    if (header_field == "country_code") { cc_idx = i }
+                    if (header_field == "network") { network_idx = i }
+                }
+                if (cc_idx == 0 || network_idx == 0) { exit 1 }
+                next
+            }
+            {
+                country_code_field = $(cc_idx); gsub(/"|\r/, "", country_code_field)
+                if (country_code_field == cc_filter) {
+                    network = $(network_idx); gsub(/"|\r/, "", network)
+                    print network
+                }
+            }
+            ' > ./${lc_country_code}_cidrs_all.txt
+            
+            # 检查是否为当前国家提取到了数据
+            if [ -s ./${lc_country_code}_cidrs_all.txt ]; then
+              HAS_ANY_FILES=true
+              grep '\.' ./${lc_country_code}_cidrs_all.txt > ./${lc_country_code}_cidrs_ipv4.txt
+              grep ':' ./${lc_country_code}_cidrs_all.txt > ./${lc_country_code}_cidrs_ipv6.txt
+              echo "✅ Successfully extracted $(wc -l < ./${lc_country_code}_cidrs_all.txt) ranges for ${country_code}."
+            else
+              echo "⚠️ Could not find any IP ranges for ${country_code}."
+              # 删除空文件
+              rm ./${lc_country_code}_cidrs_all.txt
+            fi
+          done
+          
+          # 根据是否生成了任何文件，设置输出变量
+          if [ "${HAS_ANY_FILES}" = "true" ]; then
             echo "has_files=true" >> $GITHUB_OUTPUT
           else
-            echo "⚠️ Could not find any SG IP ranges. Skipping file generation."
             echo "has_files=false" >> $GITHUB_OUTPUT
           fi
 
-      # 步骤6：生成三个版本的 DAT 文件 (仅当成功提取到IP时运行)
+      # --- 核心改造 3: 动态生成 DAT 配置文件 ---
+      # 步骤6：动态生成 DAT 文件的配置文件并执行转换
       - name: Generate DAT files
         if: steps.extract_ips.outputs.has_files == 'true'
         working-directory: ./geoip-tool
         run: |
           go build ./
-          cat <<EOF > ./config.json
-          {
-            "input": [
-              { "type": "text", "action": "add", "args": { "name": "sg", "uri": "${{ github.workspace }}/sg_cidrs_all.txt" } },
-              { "type": "text", "action": "add", "args": { "name": "sg_ipv4", "uri": "${{ github.workspace }}/sg_cidrs_ipv4.txt" } },
-              { "type": "text", "action": "add", "args": { "name": "sg_ipv6", "uri": "${{ github.workspace }}/sg_cidrs_ipv6.txt" } }
-            ],
-            "output": [
-              { "type": "v2rayGeoIPDat", "action": "output", "args": { "outputDir": "${{ github.workspace }}/output", "outputName": "geoip-sg.dat", "wantedList": ["sg"] } },
-              { "type": "v2rayGeoIPDat", "action": "output", "args": { "outputDir": "${{ github.workspace }}/output", "outputName": "geoip-sg-ipv4.dat", "wantedList": ["sg_ipv4"] } },
-              { "type": "v2rayGeoIPDat", "action": "output", "args": { "outputDir": "${{ github.workspace }}/output", "outputName": "geoip-sg-ipv6.dat", "wantedList": ["sg_ipv6"] } }
-            ]
-          }
-          EOF
+          
+          # 初始化一个空的 JSON 配置文件
+          CONFIG_JSON='{"input": [], "output": []}'
+          
+          # 再次遍历国家列表，为每个国家生成对应的 JSON 配置条目
+          for country_code in ${COUNTRIES}; do
+            lc_country_code=$(echo "${country_code}" | tr '[:upper:]' '[:lower:]')
+
+            # 仅当该国家对应的 IP 文件存在时，才为其生成配置
+            if [ -f "${{ github.workspace }}/${lc_country_code}_cidrs_all.txt" ]; then
+              echo "--- Generating config for ${country_code} ---"
+              # 使用 jq 工具动态地向 JSON 中添加 input 和 output 规则
+              CONFIG_JSON=$(echo "${CONFIG_JSON}" | jq \
+                --arg lc_code "${lc_country_code}" \
+                --arg ws_path "${{ github.workspace }}" \
+                '.input += [
+                  {"type": "text", "action": "add", "args": {"name": $lc_code, "uri": "\($ws_path)/\($lc_code)_cidrs_all.txt"}},
+                  {"type": "text", "action": "add", "args": {"name": "\($lc_code)_ipv4", "uri": "\($ws_path)/\($lc_code)_cidrs_ipv4.txt"}},
+                  {"type": "text", "action": "add", "args": {"name": "\($lc_code)_ipv6", "uri": "\($ws_path)/\($lc_code)_cidrs_ipv6.txt"}}
+                ] | .output += [
+                  {"type": "v2rayGeoIPDat", "action": "output", "args": {"outputDir": "\($ws_path)/output", "outputName": "geoip-\($lc_code).dat", "wantedList": [$lc_code]}},
+                  {"type": "v2rayGeoIPDat", "action": "output", "args": {"outputDir": "\($ws_path)/output", "outputName": "geoip-\($lc_code)-ipv4.dat", "wantedList": ["\($lc_code)_ipv4"]}},
+                  {"type": "v2rayGeoIPDat", "action": "output", "args": {"outputDir": "\($ws_path)/output", "outputName": "geoip-\($lc_code)-ipv6.dat", "wantedList": ["\($lc_code)_ipv6"]}}
+                ]')
+            fi
+          done
+          
+          # 将最终生成的完整 JSON 写入文件
+          echo "${CONFIG_JSON}" | jq . > ./config.json
+          echo "Generated config.json:"
+          cat ./config.json
+          
           mkdir -p ${{ github.workspace }}/output
           ./geoip convert -c ./config.json
           echo "✅ All DAT conversions completed successfully!"
 
-      # 步骤7：准备 .txt 文件用于发布
+      # 步骤7：准备 .txt 文件用于发布 (使用通配符，无需修改)
       - name: Prepare text files for publishing
         if: steps.extract_ips.outputs.has_files == 'true'
         run: |
-          # 将生成的三个 txt 源文件也移动到 output 目录中，以便一起发布
-          mv ./sg_cidrs_*.txt ./output/
+          # 通配符 `*` 会自动匹配所有国家的文件 (sg_*, hk_*, 等)
+          mv ./*_cidrs_*.txt ./output/
 
-      # 步骤8：为所有产物 (.dat 和 .txt) 创建校验和
+      # 步骤8, 9, 10, 11: 这些步骤都作用于 output 目录，它们会自动处理所有生成的文件，无需任何修改。
       - name: Generate sha256 checksums
         if: steps.extract_ips.outputs.has_files == 'true'
         run: |
           cd ./output
-          # 遍历 output 目录中所有的 .dat 和 .txt 文件，并为它们创建 sha256sum 文件
           for name in $(ls *.dat *.txt); do
             sha256sum ${name} > ./${name}.sha256sum
           done
           echo "Generated files and checksums:"
           ls -l
 
-      # 步骤9：将生成的产物推送到 release 分支 (用于 jsDelivr CDN)
       - name: Git push assets to "release" branch
         if: steps.extract_ips.outputs.has_files == 'true'
         run: |
@@ -186,32 +192,24 @@ jobs:
           git add -A
           git commit -m "Release: ${{ env.RELEASE_NAME }}"
           git remote add origin "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
-          # 强制推送，覆盖 release 分支的历史
           git push -f -u origin release
 
-      # 步骤10：刷新 jsDelivr CDN 缓存
       - name: Purge jsdelivr CDN
         if: steps.extract_ips.outputs.has_files == 'true'
         run: |
           cd ./output
-          # 遍历所有产物，并调用 jsDelivr 的刷新 API
           for file in $(ls); do
             echo "Purging ${file} from jsDelivr..."
             curl -sL "https://purge.jsdelivr.net/gh/${{ github.repository }}@release/${file}"
           done
 
-      # 步骤11：上传产物到 GitHub Release
       - name: Upload files to GitHub Release
         if: steps.extract_ips.outputs.has_files == 'true'
         uses: svenstaro/upload-release-action@v2
         with:
-          # 使用 GitHub Actions 自动生成的 Token
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          # 上传 output 目录下的所有文件
           file: ./output/*
           file_glob: true
-          # 使用我们之前设置的动态变量作为 Release 名称和 Tag
           release_name: ${{ env.RELEASE_NAME }}
           tag: ${{ env.TAG_NAME }}
-          # 如果同名 Tag 已存在，则覆盖
           overwrite: true
